# chippy

./: .gitignore  CMakeLists.txt  CMakePresets.json  Chip8Emulator.cpp  Chip8Emulator.sln  Chip8Emulator.vcxproj  Chip8Emulator.vcxproj.filters  Chippy.cpp  Chippy.h  README.md  chippy.sln  chippy.vcxproj  chippy.vcxproj.filters  main.cpp
.github/workflows/: cmake.yml
include/: Chippy.hpp  Display.hpp  chippy_cpu.h  chippy_display.h  chippy_input.h  chippy_input.hpp
src/: Chippy.cpp  chippy_cpu.cpp  chippy_cpu.hpp  chippy_display.cpp  chippy_display.hpp  chippy_input.cpp  chippy_input.hpp  configuration.hpp  main.cpp
